{
    "name": "InputActions",
    "maps": [
        {
            "name": "MiniGame",
            "id": "7821cb5d-8fe2-466c-909b-1186ba5efbcf",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "PassThrough",
                    "id": "1a589ceb-460c-47bd-b3eb-c770a1a812af",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "ff4b9ced-b946-4765-b92b-76dbde34d69f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ec2ece7a-d491-4ff3-a73d-1cff3f6a0e14",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "38485739-a808-4de9-88c5-d2a979923050",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Controller",
                    "id": "86220409-f237-4d3e-a02d-85ee87fc59e6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0b7097a3-3e3f-46f1-983a-11d13bb1641e",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3c86b846-5bf9-4b14-a8a6-d1491b24f8f7",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}